crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__ladder__scrolled@80x9.snap
---
source: crates/crucible-tui/src/panel.rs
expression: "picture(&panel.within(columns, room, Glyphs::Unicode), columns)"
---
<Accent>────────────────────────────────────────────────────────────────────────────────</>

<Strong>Log in</>

<Accent>›</> <Strong>Anthropic</>
  <Quiet>set ANTHROPIC_API_KEY</>
  <Quiet>· 5 more</>

<Quiet>esc to cancel</>
