crates/crucible-tui/src/snapshots/crucible_tui__panel__tests__ladder__short@80x14.snap
---
source: crates/crucible-tui/src/panel.rs
expression: "dump(&panel.within(columns, room, Glyphs::Unicode), columns)"
---
<Accent>────────────────────────────────────────────────────────────────────────────────</>
                                                                                
<Strong>Log in</>                                                                          
                                                                                
<Accent>›</> <Strong>Anthropic</>                                                                     
  <Quiet>Console API key, billed by usage</>                                              
                                                                                
  MoonshotAI                                                                    
  <Quiet>Kimi Code plan, or a Platform key</>                                             
                                                                                
  OpenAI                                                                        
  <Quiet>Console API key, billed by usage</>                                              
                                                                                
<Quiet>esc to cancel</>
